amend(select): further fix select alignment issues
closes #1994, closes #1965

--- a/src/components/select/select.scss
+++ b/src/components/select/select.scss
@@ -48,11 +48,13 @@ $select-max-visible-options: 5;
 
 md-input-container > md-select {
   margin: 0;
+  margin-top: 1.4em;
 }
 
 md-select {
   display: inline-block;
-  margin-bottom: 1.4em;
+  margin-top: 1.5em;
+  margin-bottom: 1.625em;
   margin-left: 2px;
   margin-right: 2px;
   &:focus {
